@@ -53,8 +53,8 @@ public class BooksController implements IBookStok{
 
         if (config.isAutoCompleteRequests()) {
             List<Request> requestsToRemove = stok.getRequests().stream()
-                .filter(request -> request.getBook().equals(book))
-                .collect(Collectors.toList());
+                .filter(request -> request.getBook().equals(bookCopy.getBook()))
+                .toList();
                 
             Set<BookOrder> ordersToUpdate = requestsToRemove.stream()
                 .map(this::findOrderByRequest)
@@ -62,8 +62,8 @@ public class BooksController implements IBookStok{
                 .collect(Collectors.toSet());
             
             requestsToRemove.forEach(request -> {
-                request.ContinueRequest(newBook);
-                removeBookFromStock(newBook);
+                request.ContinueRequest(bookCopy);
+                removeBookFromStock(bookCopy);
             });
             
             requestsToRemove.forEach(stok::removeRequest);
@@ -76,7 +76,7 @@ public class BooksController implements IBookStok{
             
             if (!requestsToRemove.isEmpty()) {
                 System.out.println("Выполнено запросов: " + requestsToRemove.size() + 
-                              " для книги: " + book.getName());
+                              " для книги: " + bookCopy.getBook().getName());
             }
         } else {
             System.out.println("Автоматическое выполнение запросов отключено в настройках");
